name corrected index.html
anshika name corrected

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1><span class="birthstone"> Happy Birthday</span> <span class="name"><br>  Manu Sirr <br> 🎂🌷
           </span> </h1>
       <p class="wish">Today and everyday, may you see the wonderful in you.💕⚽</p>
-      <p class="muted">- Anshika 😼</p>
+      <p class="muted">- Manu ki Anshika 😼</p>
     </div>
 
 
